[metadata]
name = pytest-remotedata
url = https://github.com/astropy/pytest-remotedata
author = The Astropy Developers
author_email = astropy.team@gmail.com
license = BSD-3-Clause
license_files = LICENSE.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Testing
    Topic :: Utilities
description = Pytest plugin for controlling remote data access.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = remote, data, pytest, py.test

[options]
zip_safe = False
packages = find:
python_requires = >=3.9
setup_requires =
    setuptools_scm
install_requires =
    pytest>=5.0
    packaging

[options.entry_points]
pytest11 =
    pytest_remotedata = pytest_remotedata.plugin

[options.packages.find]
exclude =
    tests

[tool:pytest]
minversion = 5.0
testpaths = tests
remote_data_strict = true
filterwarnings = error
